[gd_scene load_steps=5 format=3 uid="uid://3pnb1rxgdeay"]

[ext_resource type="Script" uid="uid://d15gma15frsuq" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://bwfcxlvyylgp3" path="res://assets/graphics/go_spritesheet.png" id="2_g2els"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(64, 64)

[sub_resource type="AudioStream" id="AudioStream_g2els"]

[node name="Player" type="Area2D"]
script = ExtResource("1_onrkg")

[node name="Player_sprite" type="Sprite2D" parent="."]
position = Vector2(32, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_g2els")
hframes = 4

[node name="Player_collision" type="CollisionShape2D" parent="."]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_onrkg")

[node name="Player_sounds" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStream_g2els")
volume_db = -3.029

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
